--- a/index.html
+++ b/index.html
@@ -16,18 +16,49 @@
     />
 
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/mediaqueries.css" />
 
-    <title>Responsive gym website - Bedimcode</title>
+    <title>Hustler</title>
   </head>
   <body>
-    <header class="header" id="header"></header>
+    <header class="header" id="header">
+        <nav class="nav container">
+            <a href="#" class="logo">
+                <img src="images/logo-nav.png" alt="Logo"> HUSTLER
+            </a>
+            <div class="navbar" id="nav-menu">
+                <ul class="nav-list">
+                    <li class="nav-item">
+                        <a href="#home" class="nav-link">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#about" class="nav-link">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#programs" class="nav-link">Programs</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#price" class="nav-link">Price</a>
+                    </li>
+                    <div class="nav-link">
+                        <a href="#footer" class="button nav-btn">Register Now</a>
+                    </div>
+                </ul>
+                <div class="nav-close" id="nav-close">
+                    <i class="ri-close-line"></i>
+                </div>
+                <div class="nav-toggle" id="nav-toggle">
+                    <i class="ri-menu-line"></i>
+                </div>
+            </div>
+        </nav>
+    </header>
 
     <main class="main">
       <section class="home section" id="home"></section>
-      <section class="logos section"></section>
-      <section class="program section" id="program"></section>
-      <section class="choose section" id="choose"></section>
-      <section class="pricing section" id="pricing"></section>
+      <section class="about section" id="about"></section>
+      <section class="programs section" id="programs"></section>
+      <section class="price section" id="price"></section>
       <section class="calculate section"></section>
     </main>
 
