--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a href="#" class="logo">
                 <img src="images/logo-nav.png" alt="Logo"> HUSTLER
             </a>
-            <div class="navbar" id="nav-menu">
+            <div class="nav-menu" id="nav-menu">
                 <ul class="nav-list">
                     <li class="nav-item">
                         <a href="#home" class="nav-link">Home</a>
