--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link
       rel="shortcut icon"
-      href="assets/img/favicon.png"
+      href="assets/logo.png"
       type="image/x-icon"
     />
 
@@ -18,47 +18,162 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/mediaqueries.css" />
 
+
+    <script src="https://kit.fontawesome.com/7410428b00.js" crossorigin="anonymous"></script>
+
     <title>Hustler</title>
   </head>
   <body>
-    <header class="header" id="header">
-        <nav class="nav container">
-            <a href="#" class="logo">
-                <img src="images/logo-nav.png" alt="Logo"> HUSTLER
-            </a>
-            <div class="nav-menu" id="nav-menu">
-                <ul class="nav-list">
-                    <li class="nav-item">
-                        <a href="#home" class="nav-link">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#about" class="nav-link">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#programs" class="nav-link">Programs</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#price" class="nav-link">Price</a>
-                    </li>
-                    <div class="nav-link">
-                        <a href="#footer" class="button nav-btn">Register Now</a>
-                    </div>
-                </ul>
-                <div class="nav-close" id="nav-close">
-                    <i class="ri-close-line"></i>
-                </div>
-                <div class="nav-toggle" id="nav-toggle">
-                    <i class="ri-menu-line"></i>
-                </div>
-            </div>
+      <header id="header">
+        <nav id="desktop-nav">
+          <a href="./#" class="logo">
+            <img src="assets/logo.png" alt="Hustler">
+          </a>
+          <div class="navbar">
+            <ul class="nav-links">
+              <li><a href="./#">Home</a></li>
+              <li><a href="./#about">About</a></li>
+              <li><a href="./#services">Services</a></li>
+              <li><a href="./#speciality">Speciality</a></li>
+              <li><a href="./#plans">Plans</a></li>
+              <li><a href="./#contact">Contact</a></li>
+            </ul>
+          </div>
         </nav>
-    </header>
+        <nav id="hamburger-nav">
+          <div class="logo">
+            <img src="assets/logo.png" alt="Hustler">
+          </div>
+          <div class="hamburger-menu">
+            <div class="hamburger-icon" onclick="toggleMenu()">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
+            <div class="menu-links">
+              <li><a href="./#" onclick="toggleMenu()">Home</a></li>
+              <li><a href="./#about" onclick="toggleMenu()">About</a></li>
+              <li>
+                <a href="./#services" onclick="toggleMenu()">Services</a>
+              </li>
+              <li>
+                <a href="./#speciality" onclick="toggleMenu()">Speciality</a>
+              </li>
+              <li><a href="./#plans" onclick="toggleMenu()">Plans</a></li>
+              <li><a href="./#contact" onclick="toggleMenu()">Contact</a></li>
+            </div>
+          </div>
+        </nav>
+        <div class="content overlay">
+          <h1>INTRODUCING HUSTLER</h1>
+          <h5>Fitness Centre</h5>
+          <p>"Transforming Bodies, Building Lives."</p>
+          <div class="btn-container">
+          <button class="btn btn-color-1">Contact</button>
+        </div>
+        </div>
+        <video autoplay muted loop id="header-bg">
+          <source src="assets/header-bg.mp4" type="video/mp4">
+          Your browser does not support HTML5 video.
+        </video>
+      </header>
 
-    <main class="main">
-      <section class="home section" id="home"></section>
-      <section class="about section" id="about"></section>
-      <section class="programs section" id="programs"></section>
-      <section class="price section" id="price"></section>
+    <main id="main">
+      <section class="about section" id="about">
+        <h1>About Hustler</h1>
+        <h4>Your Body, the Way You Want It</h4>
+        <div class="container">
+          <div class="about-content">
+            <p>Getting in shape shouldn't be a punishment. It's an amazing and empowering lifestyle decision that anyone can make. I believe in finding the pleasurable side of fitness; and while there may be a sore muscle or two along the way, the benefits of fitness are worth the challenge. I have developed my training regime by working with a variety of people, and constantly adapting my program to the needs of my new clients.</p> <br />
+            <div class="merits">
+            <p>
+              <strong><i class="fa-solid fa-circle-check"></i>Positive Perspective:</strong> You start by highlighting that getting in shape should be viewed positively, not as something negative or punitive. This sets the tone for a healthy mindset towards fitness.
+            </p>
+            <br />
+            <p>
+              <strong><i class="fa-solid fa-circle-check"></i>Empowering Lifestyle Decision:</strong> You express the idea that choosing to get in shape is a powerful decision that individuals can make for themselves. This implies that fitness is not just about physical changes but also about personal empowerment.
+            </p>
+            <br />
+            <p>
+              <strong><i class="fa-solid fa-circle-check"></i>Pleasurable Side of Fitness:</strong> You stress the importance of finding pleasure in fitness. This could mean enjoying the process of exercise, discovering activities you love, or experiencing the positive effects of a healthy lifestyle. The emphasis is on making the journey enjoyable.
+            </p>
+            <br />
+            <a class="btn-container" href="./#contact">
+              <button class="btn btn-color-1">Get In Touch</button>
+            </a>
+            </div>
+          </div>
+          <div class="about-img">
+            <img src="assets/portrait-2.jpg" alt="About Image">
+          </div>
+        </div>
+      </section>
+      <section class="services section" id="services">
+        <h1>What We Offer</h1>
+        <h4>Fast Track to Fitness: Get Fit in No Time!</h4>
+        <div class="service-container">
+          <div class="service-item">
+            <video autoplay muted loop class="workout">
+              <source src="assets/header-bg.mp4" type="video/mp4">
+              Your browser does not support HTML5 video.
+            </video>
+            <div class="service-content">
+              <h2>Stamina Building</h2>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum neque ex ut laboriosam unde, voluptatibus qui quaerat tempore deleniti harum fugiat, provident dicta nobis mollitia consequuntur deserunt veniam suscipit reprehenderit.</p>
+            </div>
+          </div>
+          <div class="service-item">
+          <video autoplay muted loop class="workout">
+            <source src="assets/header-bg.mp4" type="video/mp4">
+            Your browser does not support HTML5 video.
+          </video>
+          <div class="service-content">
+            <h2>Getting In Shape</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum neque ex ut laboriosam unde, voluptatibus qui quaerat tempore deleniti harum fugiat, provident dicta nobis mollitia consequuntur deserunt veniam suscipit reprehenderit.</p>
+          </div>
+        </div>
+        <div class="service-item">
+          <video autoplay muted loop class="workout">
+            <source src="assets/header-bg.mp4" type="video/mp4">
+            Your browser does not support HTML5 video.
+          </video>
+          <div class="service-content">
+            <h2>Flexibile Training</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum neque ex ut laboriosam unde, voluptatibus qui quaerat tempore deleniti harum fugiat, provident dicta nobis mollitia consequuntur deserunt veniam suscipit reprehenderit.</p>
+          </div>
+        </div>
+            <div class="service-item">
+              <video autoplay muted loop class="workout">
+                <source src="assets/header-bg.mp4" type="video/mp4">
+                Your browser does not support HTML5 video.
+              </video>
+              <div class="service-content">
+                <h2>Flexibile Training</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum neque ex ut laboriosam unde, voluptatibus qui quaerat tempore deleniti harum fugiat, provident dicta nobis mollitia consequuntur deserunt veniam suscipit reprehenderit.</p>
+              </div>
+            </div>
+        </div>
+      </section>
+
+      <section class="speciality section" id="speciality">
+        <h1>Our Speciality - Yoga</h1>
+        <h4>Yoga Harmony: Align Body, Mind, and Spirit!</h4>
+        <div class="service-container">
+          <div class="speciality">
+            <video autoplay muted loop class="workout">
+              <source src="assets/yoga.mp4" type="video/mp4">
+              Your browser does not support HTML5 video.
+            </video>
+            <div class="speciality-content">
+              <h2>Yoga Classes</h2>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum neque ex ut laboriosam unde, voluptatibus qui quaerat tempore deleniti harum fugiat, provident dicta nobis mollitia consequuntur deserunt veniam suscipit reprehenderit.</p>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum neque ex ut laboriosam unde, voluptatibus qui quaerat tempore deleniti harum fugiat, provident dicta nobis mollitia consequuntur deserunt veniam suscipit reprehenderit.</p>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum neque ex ut laboriosam unde, voluptatibus qui quaerat tempore deleniti harum fugiat, provident dicta nobis mollitia consequuntur deserunt veniam suscipit reprehenderit.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="plans section" id="plans"></section>
       <section class="calculate section"></section>
     </main>
 
