--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
         </a>
         <div class="navbar">
           <ul class="nav-links">
-            <li><a href="./#">Home</a></li>
-            <li><a href="./#about">About</a></li>
-            <li><a href="./#services">Services</a></li>
-            <li><a href="./#speciality">Speciality</a></li>
-            <li><a href="./#plans">Plans</a></li>
-            <li><a href="./#contact">Contact</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#speciality">Speciality</a></li>
+            <li><a href="#plans">Plans</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
       </nav>
@@ -246,12 +246,12 @@
     <footer class="footer section" id="footer">
       <div class="footer-nav">
         <ul>
-          <li><a href="./#">Home</a></li>
-          <li><a href="./#about">About</a></li>
-          <li><a href="./#services">Services</a></li>
-          <li><a href="./#speciality">Speciality</a></li>
-          <li><a href="./#plans">Plans</a></li>
-          <li><a href="./#contact">Contact</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#speciality">Speciality</a></li>
+          <li><a href="#plans">Plans</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
       <div class="copyright">
