--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 enjoyable.
               </p>
               <br />
-              <a class="btn-container" href="./#contact">
+              <a class="btn-container" href="#contact">
                 <button class="btn btn-color-1">Get In Touch</button>
               </a>
             </div>
