--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
         <h1>INTRODUCING HUSTLER</h1>
         <h5>Fitness Centre</h5>
         <p>"Transforming Bodies, Building Lives."</p>
-        <div class="btn-container">
+        <a class="btn-container" href="#contact">
           <button class="btn btn-color-1">Contact</button>
-        </div>
+        </a>
       </div>
       <video autoplay muted loop id="header-bg">
         <source src="assets/header-bg.mp4" type="video/mp4" />
